refactor(prettier): semi => true, singleQuote => true

--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -30,8 +30,8 @@ naive implementation would look something like this:
 ```jsx
 <CustomSelect
   options={[
-    {value: '1', display: 'Option 1'},
-    {value: '2', display: 'Option 2'},
+    {value: "1", display: "Option 1"},
+    {value: "2", display: "Option 2"},
   ]}
 />
 ```
@@ -93,8 +93,8 @@ function Foo({children}) {
   return React.Children.map(children, (child, index) => {
     return React.cloneElement(child, {
       id: `i-am-child-${index}`,
-    })
-  })
+    });
+  });
 }
 
 function Bar() {
@@ -104,7 +104,7 @@ function Bar() {
       <div>I will have id "i-am-child-1"</div>
       <div>I will have id "i-am-child-2"</div>
     </Foo>
-  )
+  );
 }
 ```
 
@@ -131,7 +131,7 @@ function App() {
         <ToggleButton />
       </Toggle>
     </div>
-  )
+  );
 }
 ```
 
