--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -52,7 +52,7 @@ this:
 
 ```javascript
 function App() {
-  const {on, togglerProps} = useToggle()
+  const {on, togglerProps} = useToggle();
   return (
     <div>
       <Switch on={on} {...togglerProps} />
@@ -60,12 +60,12 @@ function App() {
       <button
         aria-label="custom-button"
         {...togglerProps}
-        onClick={() => console.info('onButtonClick')}
+        onClick={() => console.info("onButtonClick")}
       >
-        {on ? 'on' : 'off'}
+        {on ? "on" : "off"}
       </button>
     </div>
-  )
+  );
 }
 ```
 
@@ -80,22 +80,22 @@ Let's try that. Update the `App` component to this:
 
 ```javascript
 function App() {
-  const {on, getTogglerProps} = useToggle()
+  const {on, getTogglerProps} = useToggle();
   return (
     <div>
       <Switch {...getTogglerProps({on})} />
       <hr />
       <button
         {...getTogglerProps({
-          'aria-label': 'custom-button',
-          onClick: () => console.info('onButtonClick'),
-          id: 'custom-button-id',
+          "aria-label": "custom-button",
+          onClick: () => console.info("onButtonClick"),
+          id: "custom-button-id",
         })}
       >
-        {on ? 'on' : 'off'}
+        {on ? "on" : "off"}
       </button>
     </div>
-  )
+  );
 }
 ```
 
