--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -64,10 +64,10 @@ type is `'reset'`:
 
 ```javascript
 function toggleStateReducer(state, action) {
-  if (action.type === 'toggle' && timesClicked >= 4) {
-    return {on: state.on}
+  if (action.type === "toggle" && timesClicked >= 4) {
+    return {on: state.on};
   }
-  return toggleReducer(state, action)
+  return toggleReducer(state, action);
 }
 ```
 
