--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -24,14 +24,14 @@ https://reactjs.org/docs/forms.html#controlled-components
 
 ```javascript
 function MyCapitalizedInput() {
-  const [capitalizedValue, setCapitalizedValue] = React.useState('')
+  const [capitalizedValue, setCapitalizedValue] = React.useState("");
 
   return (
     <input
       value={capitalizedValue}
       onChange={e => setCapitalizedValue(e.target.value.toUpperCase())}
     />
-  )
+  );
 }
 ```
 
@@ -48,12 +48,12 @@ we want to, which enables this kind of synchronized input situation:
 
 ```javascript
 function MyTwoInputs() {
-  const [capitalizedValue, setCapitalizedValue] = React.useState('')
-  const [lowerCasedValue, setLowerCasedValue] = React.useState('')
+  const [capitalizedValue, setCapitalizedValue] = React.useState("");
+  const [lowerCasedValue, setLowerCasedValue] = React.useState("");
 
   function handleInputChange(e) {
-    setCapitalizedValue(e.target.value.toUpperCase())
-    setLowerCasedValue(e.target.value.toLowerCase())
+    setCapitalizedValue(e.target.value.toUpperCase());
+    setLowerCasedValue(e.target.value.toLowerCase());
   }
 
   return (
@@ -61,7 +61,7 @@ function MyTwoInputs() {
       <input value={capitalizedValue} onChange={handleInputChange} />
       <input value={lowerCasedValue} onChange={handleInputChange} />
     </>
-  )
+  );
 }
 ```
 
@@ -119,11 +119,11 @@ other extra credits will handle the other cases).
 💰 You can use the `warning` package to do this:
 
 ```javascript
-warning(doNotWarn, 'Warning message')
+warning(doNotWarn, "Warning message");
 
 // so:
-warning(false, 'This will warn')
-warning(true, 'This will not warn')
+warning(false, "This will warn");
+warning(true, "This will not warn");
 ```
 
 A real-world component that does this is
