feat: complete exercise 5
* feat: complete exercise 5 extra 1

* feat: complete exercise 5 extra 2

--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -7,16 +7,16 @@ Elaborate on your learnings here in `src/exercise/05.md`
 ## Background
 
 **One liner:** The State Reducer Pattern inverts control over the state
-management of your hook and/or component to the developer using it so they can
+management of your hook and/or component to the developer using it, so they can
 control the state changes that happen when dispatching events.
 
-During the life of a reusable component which is used in many different
+During the life of a reusable component which is used in many
 contexts, feature requests are made over and over again to handle different
 cases and cater to different scenarios.
 
 We could definitely add props to our component and add logic in our reducer for
 how to handle these different cases, but there's a never ending list of logical
-customizations that people could want out of our custom hook and we don't want
+customizations that people could want out of our custom hook, and we don't want
 to have to code for every one of those cases.
 
 📜 Read more about this pattern in:
