--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -9,7 +9,7 @@ Elaborate on your learnings here in `src/exercise/06.md`
 **One liner:** The Control Props pattern allows users to completely control
 state values within your component. This differs from the state reducer pattern
 in the fact that you can not only change the state changes based on actions
-dispatched but you _also_ can trigger state changes from outside the component
+dispatched, but you _also_ can trigger state changes from outside the component
 or hook as well.
 
 Sometimes, people want to be able to manage the internal state of our component
